fix CTestTestfile.cmake files not archived
No CTestTestfile.cmake files were archived in the build job that
created them, which had the effect that the suceeding test job
silently did not find any ctest tests.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -526,6 +526,8 @@ ubuntu21-04-cmake-ASan-build-for-ctest:
         paths:
             # the C++ test programs
             - build/tests/test_*
+            # the ctest files
+            - build/**/CTestTestfile.cmake
             # archive all shared libraries produced directly by "cmake
             # --build" (but not those in the install directory that
             # cpack has copied). In the test stage, the test
