--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -524,6 +524,8 @@ ubuntu21-04-cmake-ASan-build-for-ctest:
         when: on_success
         expire_in: 1 week
         paths:
+            # the C++ test programs
+            - build/tests/test_*
             # archive all shared libraries produced directly by "cmake
             # --build" (but not those in the install directory that
             # cpack has copied). In the test stage, the test
