gvc: CMake: fix: link to zlib only if we have it
Fixes the following error when we don't have zlib:

CMake Error: The following variables are used in this project, but they are set to NOTFOUND.
Please set them or make sure they are set and tested correctly in the CMake files:
ZLIB_LIBRARY
    linked by target "gvc" in directory C:/Users/magja/graphviz/lib/gvc

--- a/lib/gvc/CMakeLists.txt
+++ b/lib/gvc/CMakeLists.txt
@@ -60,7 +60,6 @@ target_link_libraries(gvc PUBLIC
     pathplan
     xdot
     ${EXPAT_LIBRARIES}
-    ${ZLIB_LIBRARIES}
     ${MATH_LIB}
 )
 
@@ -69,6 +68,10 @@ if (LTDL_FOUND)
     if (NOT WIN32)
         target_link_libraries(gvc PUBLIC ${LTDL_LIBRARIES})
     endif()
+endif()
+
+if (ZLIB_FOUND)
+   target_link_libraries(gvc PUBLIC ${ZLIB_LIBRARIES})
 endif()
 
 if (${with_ortho})
