CMake: fix: find the LTDL package only if the enable_ltdl option is ON
Fixes this error when we don't have ltdl:

CMake Error: The following variables are used in this project, but they are set to NOTFOUND.
Please set them or make sure they are set and tested correctly in the CMake files:
C:/Users/magja/graphviz/lib/gvc/LTDL_INCLUDE_DIR
   used as include directory in directory C:/Users/magja/graphviz/lib/gvc

There is another problem when the LTDL library is not available that
will be fixed in an upcoming commit, hence no changelog entry yet.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,7 +87,11 @@ find_package(ANN)
 find_package(Cairo)
 find_package(EXPAT)
 find_package(GD)
-find_package(LTDL)
+
+if(enable_ltdl)
+  find_package(LTDL)
+endif (enable_ltdl)
+
 find_package(PangoCairo)
 find_package(ZLIB)
 
