CMake: add with_zlib option
The zlib library is already optional. This option allows the user to
explictly not use it even if they have it.

This will be used in an upcoming commit to add a minimal CMake build
job to CI which will test that it is possible to build Graphviz
without any of the optional libraries.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ option(with_ipsepcola  "IPSEPCOLA features in neato layout engine (disabled by d
 option(with_ortho      "ORTHO features in neato layout engine." ON )
 option(with_sfdp       "sfdp layout engine." ON )
 option(with_smyrna     "SMYRNA large graph viewer (disabled by default - experimental)" OFF)
+option(with_zlib       "Support raster image compression through zlib" ON)
 option(use_sanitizers  "enables using address and undefined behavior sanitizer" OFF)
 option(use_coverage    "enables analyzing code coverage" OFF)
 option(with_cxx_api    "enables building the C++ API" OFF)
@@ -97,7 +98,10 @@ if(enable_ltdl)
 endif ()
 
 find_package(PangoCairo)
-find_package(ZLIB)
+
+if(with_zlib)
+  find_package(ZLIB)
+endif()
 
 if (UNIX)
     find_library(MATH_LIB m)
