common: add linking to expat if we have it
E.g. lib/common/htmllex.c uses XML_ParserCreate from
/usr/include/expat.h when we have expat.

This removes the need to link to expat for downstream libraries that
do not explicitly use expat.

--- a/lib/common/CMakeLists.txt
+++ b/lib/common/CMakeLists.txt
@@ -119,6 +119,12 @@ target_link_libraries(common PRIVATE
     pathplan
 )
 
+if(EXPAT_FOUND)
+    target_link_libraries(common PUBLIC
+        ${EXPAT_LIBRARIES}
+    )
+endif()
+
 # Specify headers to be installed
 install(
     FILES
