default the Javascript bindings to JSC
SWIG is capable of targeting three Javascript runtimes when generating code:
JSC, V8, and NodeJS. One of these needs to be selected at generation time; there
is no default. In future it may be desirable to target the more popular of
these, NodeJS, but for now we leave it with the traditional JSC.

There are still multiple blockers to enabling this fully in the build system:

  1. The configuration setup checks for a `js` binary. I do not know what this
     is. Maybe it is intending to check for `jsc`, the JSC compiler?

  2. Even if that were true, this is the wrong thing to check for. Generation of
     bindings and their compilation requires not a Javascript compiler but the
     runtime’s C/C++ headers. For JSC, JavaScriptCore/JavaScript.h.

--- a/tclpkg/gv/Makefile.am
+++ b/tclpkg/gv/Makefile.am
@@ -118,7 +118,7 @@ libgv_javascript_la_LIBADD = $(BASELIBS) $(JAVASCRIPT_LIBS)
 libgv_javascript_la_LDFLAGS = -module -avoid-version
 libgv_javascript_la_CPPFLAGS = $(BASECPPFLAGS) $(JAVASCRIPT_INCLUDES)
 gv_javascript.cpp: gv.i
-	$(SWIG) -c++ -javascript -o $@ $(srcdir)/gv.i
+	$(SWIG) -c++ -javascript -jsc -o $@ $(srcdir)/gv.i
 
 pkgluadir = $(pkglibdir)/lua
 LUA_data = 
