CI: archive build artifacts in windows-mingw32-cmake-build job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -643,6 +643,8 @@ windows-mingw32-cmake-build:
         paths:
             - VERSION
             - COLLECTION
+            - Packages/*/*/*/*/*/*.exe
+            - Packages/*/*/*/*/*/*.zip
     tags:
         - windows
     except:
