CI: archive build artifacts in windows-mingw64-cmake-build job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -664,6 +664,8 @@ windows-mingw64-cmake-build:
         paths:
             - VERSION
             - COLLECTION
+            - Packages/*/*/*/*/*/*.exe
+            - Packages/*/*/*/*/*/*.zip
     tags:
         - windows
     except:
